# council-gate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: docker.yml  release-test.yml  release.yml  test.yml
commands/: review.md
integrations/: README.md
integrations/claude-code/council-gate/: SKILL.md
integrations/codex/: README.md
integrations/github-action/: README.md  action.yml
skills/: council-gate.md
skills/council-gate/: SKILL.md
src/council_gate/: __init__.py  cli.py  clustering.py  council.py  embeddings.py  escalation.py  gate.py  ingest.py  parsing.py  providers.py  redaction.py  types.py
src/council_gate/_assets/: analysis_review.md  eng_review.md  env.example  escalation.md  gate_lr.json  gate_tabpfn_gb.json  gate_tabpfn_lr.json  general_review.md  proposal_review.md
tests/: test_cli.py  test_clustering.py  test_council.py  test_escalation.py  test_form_schema.py  test_gate.py  test_ingest.py  test_parsing.py  test_providers.py  test_redaction.py
