[project]
name = "council-gate"
version = "1.2.1"
description = "Cross-model adversarial review with an entropy gate that routes consensus vs disagreement to an explicit escalation channel."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["llm", "review", "ai", "ensemble", "evaluation", "adversarial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.0.1a3",
]

[project.urls]
Homepage = "https://github.com/AdishAssain/council-gate"
Source = "https://github.com/AdishAssain/council-gate"
Issues = "https://github.com/AdishAssain/council-gate/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "python-docx>=1.1",
]

[project.scripts]
council-gate = "council_gate.cli:_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council_gate"]
# _assets/ ships automatically as part of the package — its files are non-.py
# but hatchling picks them up because they live inside the package directory.

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
