[project]
name = "council-gate"
version = "1.2.3"
description = "Cross-model adversarial review with an entropy gate that routes consensus vs disagreement to an explicit escalation channel."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "council-gate contributors", email = "AdishAssain@users.noreply.github.com" },
]
keywords = ["llm", "review", "ai", "ensemble", "evaluation", "adversarial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0",
    "markitdown[docx,pdf,pptx,xlsx]>=0.0.1a3",
]

[project.urls]
Homepage = "https://github.com/AdishAssain/council-gate"
Source = "https://github.com/AdishAssain/council-gate"
Issues = "https://github.com/AdishAssain/council-gate/issues"
Documentation = "https://github.com/AdishAssain/council-gate#readme"
Changelog = "https://github.com/AdishAssain/council-gate/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "python-docx>=1.1",
]

[project.scripts]
council-gate = "council_gate.cli:_entrypoint"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/council_gate"]
# _assets/ ships automatically as part of the package — its files are non-.py
# but hatchling picks them up because they live inside the package directory.

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
